--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/slick/slick.css">
+	<link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/animate/animate.css">
   <meta charset="utf-8">
   <title>Nelly Bee</title>
   <base href="/">
