--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,8 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-	<link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/slick/slick.css">
-	<link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/animate/animate.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TPSSF8H');</script>
+  <!-- End Google Tag Manager -->
+
+
+  <link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/slick/slick.css">
+  <link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/animate/animate.css">
   <meta charset="utf-8">
   <title>Nelly Bee</title>
   <base href="/">
@@ -10,7 +24,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPSSF8H" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <app-root></app-root>
 </body>
+
 </html>
