--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,6 +14,10 @@
     })(window, document, 'script', 'dataLayer', 'GTM-TPSSF8H');</script>
   <!-- End Google Tag Manager -->
 
+  <script type="text/javascript" src="./assets/custom-javascript/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./assets/vendor-libraries/slick/slick.min.js"></script>
+	<script type="text/javascript" src="./assets/custom-javascript/slick-custom.js"></script>
+  <script type="text/javascript" src="./assets/custom-javascript/main.js"></script>
 
   <link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/slick/slick.css">
   <link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/animate/animate.css">
