removed slick.js and added ngx-slick

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -15,9 +15,9 @@
   <!-- End Google Tag Manager -->
 
   <script type="text/javascript" src="./assets/custom-javascript/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./assets/vendor-libraries/slick/slick.min.js"></script>
-	<script type="text/javascript" src="./assets/custom-javascript/slick-custom.js"></script>
-  <script type="text/javascript" src="./assets/custom-javascript/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css" />
+  <script src="https://unpkg.com/slick-carousel@1.6.0/slick/slick.js"></script>
 
   <link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/slick/slick.css">
   <link rel="stylesheet" type="text/css" href="./assets/vendor-libraries/animate/animate.css">
